# DroidCoder2

./: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/deividsrk/droidcoder/: MainActivity.kt
app/src/main/java/com/deividsrk/droidcoder/agent/: AgentApi.kt  AgentCore.kt  Models.kt  SystemPrompt.kt
app/src/main/java/com/deividsrk/droidcoder/browser/: BrowserManager.kt
app/src/main/java/com/deividsrk/droidcoder/file/: FileManager.kt  NativeBridge.kt
app/src/main/java/com/deividsrk/droidcoder/git/: GitManager.kt
app/src/main/java/com/deividsrk/droidcoder/services/: AgentForegroundService.kt
app/src/main/java/com/deividsrk/droidcoder/tool/: ToolExecutor.kt  ToolRegistry.kt
app/src/main/java/com/deividsrk/droidcoder/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/deividsrk/droidcoder/ui/browser/: EmbeddedAppBrowser.kt
app/src/main/java/com/deividsrk/droidcoder/ui/chat/: ChatScreen.kt
app/src/main/java/com/deividsrk/droidcoder/ui/explorer/: FileExplorerScreen.kt
app/src/main/java/com/deividsrk/droidcoder/ui/settings/: SettingsScreen.kt
app/src/main/java/com/deividsrk/droidcoder/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+1 files in other folders)
